test/tests/stages/8_loops/valid/extra_credit/switch_not_taken.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  case
  const int(2)
  :
  return
  const int(0)
  ;
  case
  const int(3)
  :
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
