test/tests/stages/8_loops/invalid_semantics/extra_credit/default_continue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  switch
  (
  identifier(a)
  +
  const int(1)
  )
  {
  case
  const int(0)
  :
  identifier(a)
  =
  const int(1)
  ;
  default
  :
  continue
  ;
  }
  return
  identifier(a)
  ;
  }
